fix logic get appointment by branch
