# backend/modules/barberbooking/routes/appointmentRoute.go
@@ -9,6 +9,7 @@ import (
 )
 
 func RegisterAppointmentRoute(router fiber.Router ,ctrl *barberBookingController.AppointmentController){
+	router.Get("/branches/:branch_id/appointments",ctrl.GetAppointmentsByBranch)
 	group := router.Group("/tenants/:tenant_id/appointments")
 	group.Get("/", ctrl.ListAppointments) //รอเช็คเรื่อง not_found //
 	group.Get("/barbers/:barber_id/availability", ctrl.CheckBarberAvailability) //ยังไม่ผ่านใน dev
